@@ -1,3 +1,2 @@
 ;;; Generated by bin/install.ms
-(set-site-config! 'bin-path "/usr/local/bin")
-(set-site-config! 'mod-path '("." "/usr/local/lib/waspvm"))
+(set-site-config! 'mod-path '("."))
