@@ -1,3 +1,9 @@
+????/??/?? Namespace Cleanup
+  - Renamed set primitive to make-set.
+  + Renamed dict primitive to make-dict.
+  + Renamed tc-append! primitive to tc-add!
+  + Modified tc-add! to accept multiple items, not just one.
+
 2008/06/11 WaspDoc Parses Module Files
   - Added waspdoc/waspdoc.ms
   - waspdoc/waspdoc can analyze module files for their imports and exports
